[gd_scene load_steps=4 format=3 uid="uid://ba1evhl3y86ym"]

[ext_resource type="Script" uid="uid://c60k7mikxl1e4" path="res://Scripts/MortarBullet.gd" id="1_i0yva"]
[ext_resource type="Texture2D" uid="uid://cjdqaacxl4alu" path="res://Graphics/Guns & Bullets/Small Guns/Bullets/Bullets (3).png" id="1_iyoic"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bdwlh"]
radius = 3.0

[node name="MortarBullet" type="Area2D"]
collision_layer = 16
script = ExtResource("1_i0yva")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_iyoic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bdwlh")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
